build deployment + configurable imagePath
