# frontend/openapi.json
@@ -309,6 +309,10 @@
             "type": "integer",
             "format": "int32"
           },
+          "tableNumber": {
+            "type": "integer",
+            "format": "int32"
+          },
           "totalPages": {
             "type": "integer",
             "format": "int32"
